Concurrency - Replaces Arrays.asList with List.of